Fix tags select display on mobile

--- a/src/features/tags/TagsSelect.module.css
+++ b/src/features/tags/TagsSelect.module.css
@@ -5,6 +5,7 @@
   max-width: 100%;
   background: var(--grey-950);
   border-radius: 4px;
+  min-width: 200px;
 }
 
 .tags-select .control {
